[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/main_menu/options.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/fonts/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/template_button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = 63.0
margin_right = 123.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="GoBackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -106.0
margin_right = 171.0
margin_bottom = -37.0
text = "Go Back"
script = ExtResource( 4 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -200.0
margin_right = 164.0
margin_bottom = 200.0
custom_constants/separation = 20

[node name="FullscreenCheckBox" type="CheckBox" parent="Container"]
margin_right = 328.0
margin_bottom = 31.0
text = "Fullscreen"

[node name="MasterVolume" type="VBoxContainer" parent="Container"]
margin_top = 51.0
margin_right = 328.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="Container/MasterVolume"]
margin_right = 328.0
margin_bottom = 23.0
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Container/MasterVolume"]
margin_top = 27.0
margin_right = 328.0
margin_bottom = 43.0
min_value = -80.0
max_value = 8.0

[node name="EffectsVolume" type="VBoxContainer" parent="Container"]
margin_top = 114.0
margin_right = 328.0
margin_bottom = 157.0

[node name="Label" type="Label" parent="Container/EffectsVolume"]
margin_right = 328.0
margin_bottom = 23.0
text = "Effects Volume"

[node name="HSlider" type="HSlider" parent="Container/EffectsVolume"]
margin_top = 27.0
margin_right = 328.0
margin_bottom = 43.0
min_value = -80.0
max_value = 8.0

[node name="MusicVolume" type="VBoxContainer" parent="Container"]
margin_top = 177.0
margin_right = 328.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="Container/MusicVolume"]
margin_right = 328.0
margin_bottom = 23.0
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Container/MusicVolume"]
margin_top = 27.0
margin_right = 328.0
margin_bottom = 43.0
min_value = -80.0
max_value = 8.0

[node name="Default" type="Button" parent="Container"]
margin_top = 240.0
margin_right = 328.0
margin_bottom = 269.0
text = "Reset Default"

[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="toggled" from="Container/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="value_changed" from="Container/MasterVolume/HSlider" to="." method="_on_Volume_value_changed" binds= [ "Master" ]]
[connection signal="value_changed" from="Container/EffectsVolume/HSlider" to="." method="_on_Volume_value_changed" binds= [ "Effects" ]]
[connection signal="value_changed" from="Container/MusicVolume/HSlider" to="." method="_on_Volume_value_changed" binds= [ "Music" ]]
[connection signal="pressed" from="Container/Default" to="." method="_on_Default_pressed"]
